tests/spec/fail/map_get_missing_no_default.aja
m = {"a": 1}
print(m.get("x"))
